force-app/main/default/objects/RelacionadoNegociacao__c/RelacionadoNegociacao__c.object-meta.xml
<CustomObject>
    <label>Relacionado da negociação</label>
    <nameField>
        <displayFormat>RN-{0000}</displayFormat>
        <label>Relacionado da negociação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relacionados da negociação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>