force-app/main/default/objects/RelacionadoNegociacao__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <label>Documento</label>
    <length>25</length>
    <type>Text</type>
</CustomField>