force-app/main/default/objects/RelacionadoNegociacao__c/fields/NomeRazaoSocial__c.field-meta.xml
<CustomField>
    <fullName>NomeRazaoSocial__c</fullName>
    <label>Nome / Razão social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>