force-app/main/default/objects/RelacionadoNegociacao__c/fields/PercentualConcentracao__c.field-meta.xml
<CustomField>
    <fullName>PercentualConcentracao__c</fullName>
    <label>Percentual de concentração</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>