force-app/main/default/objects/RelacionadoNegociacao__c/recordTypes/Avalista.recordType-meta.xml
<RecordType>
    <fullName>Avalista</fullName>
    <active>true</active>
    <label>Avalista</label>
</RecordType>