force-app/main/default/objects/RelacionadoNegociacao__c/recordTypes/Sacado.recordType-meta.xml
<RecordType>
    <fullName>Sacado</fullName>
    <active>true</active>
    <label>Sacado</label>
</RecordType>